--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -3,8 +3,7 @@
 }
 
 .content {
-  margin-top: 64px;
-  overflow: hidden;
+  padding-top: 64px;
 }
 
 nz-sider {
@@ -14,5 +13,5 @@ nz-sider {
 }
 
 nz-content {
-  padding: 12px 8px;
+  //padding: 12px 8px;
 }
