--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -4,105 +4,6 @@
   </button>
 </wpx-layout>
 
-<ng-template #searchTpl>
-  <nz-row [nzGutter]="12">
-    <nz-col>
-      <nz-input-group nzCompact>
-        <nz-select style="width: 160px" [(ngModel)]="searchQuick.field" nzPlaceHolder="请选择查询字段" nzAllowClear>
-          <ng-container *ngFor="let x of search">
-            <nz-option [nzLabel]="x.label" [nzValue]="x.key"></nz-option>
-          </ng-container>
-        </nz-select>
-        <input
-          (keyup.enter)="quickSearch()"
-          [(ngModel)]="searchQuick.value"
-          style="width: 260px"
-          type="text"
-          nz-input
-          [placeholder]="'请输入查询关键词'"
-        />
-        <button (click)="quickSearch()" nz-button nzSearch><i nz-icon nzType="search"></i></button>
-      </nz-input-group>
-    </nz-col>
-    <nz-col>
-      <nz-button-group>
-        <button nz-button (click)="openSearchAdvanced()"> 高级搜索 </button>
-        <button nz-button nzType="dashed" nz-tooltip="重置搜索">
-          <i nz-icon nzType="clear"></i>
-        </button>
-      </nz-button-group>
-    </nz-col>
-  </nz-row>
-</ng-template>
-
-<ng-template #extra>
-  <wpx-table-box (refresh)="getData(true)" [size]="coll.height"></wpx-table-box>
-</ng-template>
-
-<nz-card [nzTitle]="searchTpl" [nzExtra]="extra">
-  <nz-table
-    #basicTable
-    [nzData]="coll.value"
-    [nzLoading]="coll.loading"
-    [nzTotal]="coll.total"
-    [(nzPageSize)]="coll.limit"
-    [(nzPageIndex)]="coll.index"
-    [nzFrontPagination]="false"
-    [nzScroll]="{ x: '1600px' }"
-    [nzTitle]="coll.checkedNumber ? bulk : null"
-    (nzPageIndexChange)="getData()"
-  >
-    <ng-template #bulk>
-      <nz-alert nzType="info" nzBanner [nzMessage]="message"></nz-alert>
-      <ng-template #message>
-        <nz-row nzJustify="space-between">
-          <nz-col> 已选中 {{ coll.checkedNumber }} 项 </nz-col>
-          <nz-col></nz-col>
-          <nz-col style="text-align: right">
-            <a nz-button nzType="link" nzSize="small">操作<i nz-icon nzType="down"></i></a>
-            <a nz-button nzType="link" nzSize="small">取消选择</a>
-          </nz-col>
-        </nz-row>
-      </ng-template>
-    </ng-template>
-    <thead>
-      <tr>
-        <th
-          nzWidth="65px"
-          nzLeft
-          nzAlign="center"
-          [nzChecked]="coll.checked"
-          [nzIndeterminate]="coll.indeterminate"
-          (nzCheckedChange)="coll.setAllChecked($event)"
-        ></th>
-        <th nzWidth="300px">订单号</th>
-        <th nzWidth="300px">服务号</th>
-        <th nzWidth="300px">服务名称</th>
-        <th nzWidth="300px">服务描述</th>
-        <th nzWidth="300px">服务码</th>
-        <th nzWidth="100px" nzRight nzAlign="center">操作</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let data of basicTable.data">
-        <td
-          nzLeft
-          nzAlign="center"
-          [nzDisabled]="data.disabled"
-          [nzChecked]="coll.checkedIds.has(data._id)"
-          (nzCheckedChange)="coll.setChecked(data._id, $event)"
-        ></td>
-        <td>{{ data.order_number }}</td>
-        <td>{{ data.service_number }}</td>
-        <td>{{ data.service_name }}</td>
-        <td>{{ data.service_description }}</td>
-        <td>{{ data.service_code }}</td>
-        <td nzRight nzAlign="center">
-          <button nz-button nzType="text">
-            <i nz-icon nzType="ellipsis"></i>
-          </button>
-        </td>
-      </tr>
-    </tbody>
-  </nz-table>
+<nz-card [nzTitle]="table.searchbox" [nzExtra]="table.toolbox">
+  <wpx-table #table [coll]="coll" (fetch)="getData($event)"></wpx-table>
 </nz-card>
