--- a/projects/ngx/common/wpx-table/wpx-table.component.html
+++ b/projects/ngx/common/wpx-table/wpx-table.component.html
@@ -2,31 +2,71 @@
   <nz-row [nzGutter]="12">
     <nz-col>
       <nz-input-group nzCompact>
-        <nz-select style="width: 160px" [(ngModel)]="searchQuick.field" nzPlaceHolder="请选择查询字段" nzAllowClear>
-          <ng-container *ngFor="let x of search">
-            <nz-option [nzLabel]="x.label" [nzValue]="x.key"></nz-option>
-          </ng-container>
-        </nz-select>
         <input
-          (keyup.enter)="quickSearch()"
-          [(ngModel)]="searchQuick.value"
-          style="width: 260px"
+          (keyup.enter)="searchSubmit()"
+          [(ngModel)]="coll.searchText"
+          style="width: 420px"
           type="text"
           nz-input
-          [placeholder]="'请输入查询关键词'"
+          placeholder="请输入关键词（ 多个关键词使用逗号分隔 ）"
         />
-        <button (click)="quickSearch()" nz-button nzSearch><i nz-icon nzType="search"></i></button>
+        <button (click)="searchSubmit()" nz-button nzSearch><i nz-icon nzType="search"></i></button>
       </nz-input-group>
     </nz-col>
     <nz-col>
       <nz-button-group>
-        <button nz-button (click)="openSearchAdvanced()"> 高级搜索 </button>
-        <button nz-button nzType="dashed" nz-tooltip="重置搜索">
+        <button nz-button (click)="openSearchForm()"> 高级搜索 </button>
+        <button nz-button nzType="dashed" nz-tooltip="清除搜索" (click)="searchClear()">
           <i nz-icon nzType="clear"></i>
         </button>
       </nz-button-group>
     </nz-col>
   </nz-row>
+
+  <nz-drawer
+    nzTitle="高级搜索"
+    [nzVisible]="searchVisible"
+    [nzWidth]="450"
+    [nzMask]="false"
+    [nzFooter]="footerTpl"
+    [nzBodyStyle]="{ overflow: 'auto' }"
+    (nzOnClose)="closeSearchForm()"
+  >
+    <ng-container *nzDrawerContent>
+      <form
+        *ngIf="searchForm"
+        id="search"
+        nzLayout="vertical"
+        nz-form
+        [formGroup]="searchForm"
+        (wpxSubmit)="searchSubmit($event)"
+      >
+        <ng-container *ngFor="let x of coll.columns">
+          <nz-form-item [formGroupName]="x.value" style="margin-bottom: 1em">
+            <nz-form-label>{{ x.label }}</nz-form-label>
+            <nz-form-control>
+              <nz-input-group nzCompact>
+                <nz-select style="width: 30%" formControlName="operator">
+                  <nz-option [nzLabel]="'精确'" [nzValue]="'$eq'"></nz-option>
+                  <nz-option [nzLabel]="'模糊'" [nzValue]="'$regex'"></nz-option>
+                </nz-select>
+                <input style="width: 70%" nz-input formControlName="value" />
+              </nz-input-group>
+            </nz-form-control>
+          </nz-form-item>
+        </ng-container>
+      </form>
+    </ng-container>
+
+    <ng-template #footerTpl>
+      <nz-space>
+        <button *nzSpaceItem nz-button form="search"> <i nz-icon nzType="search"></i> 搜索 </button>
+        <button *nzSpaceItem nz-button (click)="searchReset()" type="reset">
+          <i nz-icon nzType="clear"></i> 重置
+        </button>
+      </nz-space>
+    </ng-template>
+  </nz-drawer>
 </ng-template>
 
 <ng-template #toolbox>
