--- a/projects/components/table/wpx-table.component.html
+++ b/projects/components/table/wpx-table.component.html
@@ -135,6 +135,7 @@
   #basicTable
   [nzTitle]="coll.checkedNumber ? bulk : null"
   [nzLoading]="coll.loading"
+  [nzLoadingDelay]="200"
   [nzSize]="coll.columnsHeight"
   [nzData]="coll.value"
   [nzScroll]="scroll"
