--- a/projects/components/settings/wpx-schema/wpx-schema.component.html
+++ b/projects/components/settings/wpx-schema/wpx-schema.component.html
@@ -91,10 +91,10 @@
               <thead>
                 <tr>
                   <th nzWidth="65px" nzLeft nzAlign="center"> </th>
-                  <th nzWidth="240px"><b>集合命名</b></th>
-                  <th nzWidth="240px"><b>显示名称</b></th>
-                  <th><b>描述</b></th>
-                  <th nzWidth="100px" nzRight nzAlign="center"><b>操作</b></th>
+                  <th nzWidth="300px">集合命名</th>
+                  <th nzWidth="300px">显示名称</th>
+                  <th>描述</th>
+                  <th nzWidth="100px" nzRight nzAlign="center">操作</th>
                 </tr>
               </thead>
               <tbody>
@@ -148,10 +148,10 @@
               <thead>
                 <tr>
                   <th nzWidth="65px" nzLeft nzAlign="center"> </th>
-                  <th nzWidth="240px"><b>字段名称</b></th>
-                  <th nzWidth="240px"><b>显示名称</b></th>
-                  <th><b>描述</b></th>
-                  <th nzWidth="100px" nzRight nzAlign="center"><b>操作</b></th>
+                  <th nzWidth="300px">字段名称</th>
+                  <th nzWidth="300px">显示名称</th>
+                  <th>描述</th>
+                  <th nzWidth="100px" nzRight nzAlign="center">操作</th>
                 </tr>
               </thead>
               <tbody cdkDropList (cdkDropListDropped)="fieldAct.sort($event)">
