--- a/projects/components/template/wpx-template-table/wpx-template-table.component.html
+++ b/projects/components/template/wpx-template-table/wpx-template-table.component.html
@@ -4,10 +4,10 @@
   </button>
 </wpx-layout>
 
-<nz-card *ngIf="coll; else loading" [nzTitle]="table.searchbox" [nzExtra]="table.toolbox">
+<nz-card *ngIf="!loading; else loadingCard" [nzTitle]="table.searchbox" [nzExtra]="table.toolbox">
   <wpx-table #table [coll]="coll" (fetch)="getData($event)"></wpx-table>
 </nz-card>
 
-<ng-template #loading>
+<ng-template #loadingCard>
   <nz-card [nzLoading]="true"></nz-card>
 </ng-template>
