--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,14 +1,10 @@
 <nz-header>
   <nz-row nzJustify="space-between">
     <nz-col>
-      <div class="logo">
-        <a href="#">
-          <img src="/assets/logo.svg" alt="ng-zorro-antd" />
-          <h1>WEPLANX</h1>
-        </a>
-      </div>
+      <button nz-button nzType="text">
+        <i nz-icon nzType="appstore"></i>
+      </button>
     </nz-col>
-    <nz-col> </nz-col>
     <nz-col>
       <nz-space>
         <div *nzSpaceItem class="center" nz-popover [nzPopoverContent]="center" nzPopoverPlacement="bottomRight">
