--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -6,7 +6,7 @@
       <wpx-nav></wpx-nav>
     </nz-sider>
     <nz-layout style="overflow: auto">
-      <wpx-page-header></wpx-page-header>
+      <!--      <wpx-page-header></wpx-page-header>-->
       <nz-content>
         <router-outlet></router-outlet>
       </nz-content>
