--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -12,9 +12,9 @@ nz-header {
   background: #fff;
   transition: width 0.2s;
 
-  button {
-    height: 100%;
-  }
+  //button {
+  //  height: 100%;
+  //}
 }
 
 .logo {
