--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -11,30 +11,11 @@ nz-header {
   box-shadow: 0 1px 4px rgb(0 21 41 / 8%);
   background: #fff;
   transition: width 0.2s;
-
-  //button {
-  //  height: 100%;
-  //}
 }
 
-.logo {
-  padding: 0 12px;
-  cursor: pointer;
-
-  h1 {
-    display: inline-block;
-    height: 32px;
-    line-height: 32px;
-    margin: 0 0 0 12px;
-    font-weight: 600;
-    font-size: 18px;
-    vertical-align: middle;
-  }
-
-  img {
-    display: inline-block;
-    height: 32px;
-    vertical-align: middle;
+.app-menu {
+  span.name {
+    margin-left: 10px;
   }
 }
 
