--- a/src/app/admin/pages/pages.component.html
+++ b/src/app/admin/pages/pages.component.html
@@ -1,4 +1,6 @@
-<nz-card>
+<ng-template #title></ng-template>
+
+<nz-card [nzTitle]="title">
   <nz-row [nzGutter]="16">
     <nz-col [nzXXl]="4" [nzXl]="5" [nzLg]="6">
       <nz-tree
