--- a/projects/components/table/wpx-table.component.html
+++ b/projects/components/table/wpx-table.component.html
@@ -8,25 +8,29 @@
           style="width: 420px"
           type="text"
           nz-input
-          placeholder="请输入关键词（ 多个关键词使用逗号分隔 ）"
+          placeholder="请输入关键词"
+          nz-tooltip="多个关键词可使用逗号分隔"
         />
         <button (click)="submitSearch()" nz-button nzSearch><i nz-icon nzType="search"></i></button>
       </nz-input-group>
     </nz-col>
     <nz-col>
       <nz-button-group>
-        <button nz-button (click)="openSearchForm()"> 高级搜索 </button>
-        <button nz-button nzType="dashed" nz-tooltip="清除搜索" (click)="clearSearch()">
+        <button nz-button (click)="openSearchForm()">
+          <i nz-icon nzType="filter"></i>
+          筛选
+        </button>
+        <button nz-button (click)="clearSearch()" nz-tooltip="清除筛选">
           <i nz-icon nzType="clear"></i>
         </button>
       </nz-button-group>
     </nz-col>
   </nz-row>
   <nz-drawer
-    nzTitle="高级搜索"
+    nzTitle="条件筛选"
     [nzVisible]="searchVisible"
-    [nzWidth]="450"
-    [nzMask]="false"
+    nzPlacement="bottom"
+    nzHeight="50%"
     [nzFooter]="footerTpl"
     [nzBodyStyle]="{ overflow: 'auto' }"
     (nzOnClose)="closeSearchForm()"
@@ -40,20 +44,24 @@
         [formGroup]="searchForm"
         (wpxSubmit)="submitSearch($event)"
       >
-        <ng-container *ngFor="let x of coll.columns">
-          <nz-form-item [formGroupName]="x.value" style="margin-bottom: 1em">
-            <nz-form-label>{{ x.label }}</nz-form-label>
-            <nz-form-control>
-              <nz-input-group nzCompact>
-                <nz-select style="width: 30%" formControlName="operator">
-                  <nz-option [nzLabel]="'精确'" [nzValue]="'$eq'"></nz-option>
-                  <nz-option [nzLabel]="'模糊'" [nzValue]="'$regex'"></nz-option>
-                </nz-select>
-                <input style="width: 70%" nz-input formControlName="value" />
-              </nz-input-group>
-            </nz-form-control>
-          </nz-form-item>
-        </ng-container>
+        <nz-row [nzGutter]="16">
+          <ng-container *ngFor="let x of coll.columns">
+            <nz-col [nzSpan]="8">
+              <nz-form-item [formGroupName]="x.value">
+                <nz-form-label>{{ x.label }}</nz-form-label>
+                <nz-form-control>
+                  <nz-input-group nzCompact>
+                    <nz-select style="width: 30%" formControlName="operator">
+                      <nz-option [nzLabel]="'精确'" [nzValue]="'$eq'"></nz-option>
+                      <nz-option [nzLabel]="'模糊'" [nzValue]="'$regex'"></nz-option>
+                    </nz-select>
+                    <input style="width: 70%" nz-input formControlName="value" />
+                  </nz-input-group>
+                </nz-form-control>
+              </nz-form-item>
+            </nz-col>
+          </ng-container>
+        </nz-row>
       </form>
     </ng-container>
 
@@ -201,7 +209,7 @@
           </nz-resize-handle>
         </th>
       </ng-container>
-      <th nzWidth="100px" nzRight nzAlign="center">操作</th>
+      <th nzWidth="100px" nzRight nzAlign="center"> 操作 </th>
     </tr>
   </thead>
   <tbody>
