--- a/src/app/admin/apps/apps.component.html
+++ b/src/app/admin/apps/apps.component.html
@@ -1,3 +1,9 @@
+<wpx-layout title="应用管理">
+  <button *wpxLayoutAction nz-button nzType="primary" nzShape="circle" nz-tooltip="新增">
+    <i nz-icon nzType="plus"></i>
+  </button>
+</wpx-layout>
+
 <nz-card [nzTitle]="table.searchbox" [nzExtra]="table.toolbox">
   <wpx-table #table [coll]="coll" (fetch)="getData($event)"></wpx-table>
 </nz-card>
