--- a/src/app/admin/roles/roles.component.html
+++ b/src/app/admin/roles/roles.component.html
@@ -1,1 +1,7 @@
-role
+<wpx-layout title="权限管理">
+  <button *wpxLayoutAction nz-button nzType="primary" nzShape="circle" nz-tooltip="新增">
+    <i nz-icon nzType="plus"></i>
+  </button>
+</wpx-layout>
+
+<nz-card></nz-card>
