--- a/src/app/admin/pages/pages.component.html
+++ b/src/app/admin/pages/pages.component.html
@@ -1,25 +1,49 @@
 <wpx-layout title="页面管理">
-  <button *wpxLayoutAction nz-button nzType="primary" nzShape="circle" nz-tooltip="新增">
+  <button *wpxLayoutAction nz-button nzType="primary" nzShape="circle" nz-tooltip="新增" (click)="form()">
     <i nz-icon nzType="plus"></i>
   </button>
 </wpx-layout>
 
-<nz-card>
+<ng-template #title>
+  <nz-space>
+    <nz-button-group *nzSpaceItem>
+      <button nz-button nz-tooltip="全部收起" (click)="setExpanded(tree.getTreeNodes(), false)">
+        <i nz-icon nzType="node-collapse"></i>
+      </button>
+      <button nz-button nz-tooltip="全部展开" (click)="setExpanded(tree.getTreeNodes(), true)">
+        <i nz-icon nzType="node-expand"></i>
+      </button>
+    </nz-button-group>
+    <nz-input-group *nzSpaceItem nzSuffixIcon="search">
+      <input type="text" style="width: 240px" nz-input placeholder="搜索" [(ngModel)]="name" />
+    </nz-input-group>
+  </nz-space>
+</ng-template>
+
+<ng-template #extra>
+  <nz-select [(ngModel)]="project" style="width: 240px">
+    <ng-container *ngFor="let x of projectList">
+      <nz-option [nzValue]="x._id" [nzLabel]="x.name"></nz-option>
+    </ng-container>
+  </nz-select>
+</ng-template>
+
+<nz-card [nzTitle]="title" [nzExtra]="extra">
   <nz-row [nzGutter]="16">
     <nz-col [nzXXl]="4" [nzXl]="5" [nzLg]="6">
-      <!--      <nz-tree-->
-      <!--        #tree-->
-      <!--        nzBlockNode-->
-      <!--        nzShowLine-->
-      <!--        nzShowIcon-->
-      <!--        nzExpandAll-->
-      <!--        nzDraggable-->
-      <!--        [nzData]="nodes"-->
-      <!--        [nzSearchValue]="name"-->
-      <!--        (nzClick)="fetchData($event)"-->
-      <!--      >-->
-      <!--      </nz-tree>-->
+      <nz-tree
+        #tree
+        nzBlockNode
+        nzShowLine
+        nzShowIcon
+        nzExpandAll
+        nzDraggable
+        [nzData]="nodes"
+        [nzSearchValue]="name"
+        (nzClick)="fetchData($event)"
+      >
+      </nz-tree>
     </nz-col>
-    <nz-col [nzXXl]="20" [nzXl]="19" [nzLg]="18"> </nz-col>
+    <nz-col [nzXXl]="20" [nzXl]="19" [nzLg]="18"> <nz-empty></nz-empty> </nz-col>
   </nz-row>
 </nz-card>
