--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -3,11 +3,8 @@
   <nz-layout class="content">
     <nz-sider nzTheme="light" [nzWidth]="240">
       <ul nz-menu nzMode="inline">
-        <li nz-menu-group nzTitle="项目设置">
+        <li nz-menu-group nzTitle="应用设置">
           <ul>
-            <li nz-menu-item nzMatchRouter [routerLink]="['projects']">
-              <i nz-icon nzType="project"></i> <span>项目管理</span>
-            </li>
             <li nz-menu-item nzMatchRouter [routerLink]="['pages']">
               <i nz-icon nzType="file-sync"></i> <span>页面管理</span>
             </li>
