--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,19 +9,11 @@
           <i nz-icon nzType="appstore"></i>
           <nz-dropdown-menu #menu="nzDropdownMenu">
             <ul class="app-menu" nz-menu nzSelectable>
-              <li nz-menu-item> <i nz-icon nzType="laptop"></i> <span class="name">工作区</span> </li>
-              <li nz-submenu>
-                <span title><i nz-icon nzType="project"></i><span class="name">我的项目</span></span>
-                <ul>
-                  <li nz-menu-item>默认</li>
-                  <li nz-menu-item>自定义工单</li>
-                  <li nz-menu-item>产品系统</li>
-                </ul>
-              </li>
+              <li nz-menu-item> <i nz-icon nzType="home"></i> <span class="name">我的应用</span> </li>
               <li nz-menu-item> <i nz-icon nzType="inbox"></i> <span class="name">多媒体资源</span> </li>
               <li nz-menu-item>
                 <i nz-icon nzType="tool"></i>
-                <span class="name">经营者工具</span>
+                <span class="name">管理者工具</span>
               </li>
             </ul>
           </nz-dropdown-menu>
